Post header changed to blue

--- a/page.html
+++ b/page.html
@@ -51,7 +51,7 @@
 		}
 
 		.post h2 {
-			color: #83c10f;
+			color: #102ac2;
 			padding: 0px 0px 20px 0px;
 			border-bottom: 1px solid #eee;
 		}
