Bunch of stupid stuff

--- a/page.html
+++ b/page.html
@@ -7,7 +7,7 @@
 			font-family: "Helvetica Neue", Arial, sans-serif;
 			font-size: 13px;
 			line-height: 1.6em;
-			color: #484747;
+			color: #ff00e6;
 			
 			margin: 0px;
 			padding: 0px;
@@ -51,7 +51,7 @@
 		}
 
 		.post h2 {
-			color: #102ac2;
+			color: #ff00e6;
 			padding: 0px 0px 20px 0px;
 			border-bottom: 1px solid #eee;
 		}
